# shareDT

./: .gitattributes  .gitignore  .gitmodules  Build.md  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: ffmpeg-config.cmake  functions.cmake  libs.cmake  openssl-config.cmake  png-config.cmake  sdl2-config.cmake  sources.cmake  zlib-config.cmake
cmake/contrib/: bzip2-config.cmake  ffmpeg-config.cmake  jpeg-config.cmake  lzma-config.cmake  lzo-config.cmake  sdl2-config.cmake  vvdec-config.cmake  vvenc-config.cmake  x264-config.cmake
contrib/: build-contrib.py  buildc.py  lzo-config.cmake  sdl2-config.cmake  zlib-config.cmake
contrib/cmake/: ffmpeg-config.cmake  jpeg-config.cmake  openssl-config.cmake  png-config.cmake  x265-config.cmake  zlib-config.cmake
contrib/ffmpeg/: configure
contrib/ffmpeg/libavcodec/: libx264.c  mf_utils.h  parser.c
contrib/libjpeg-turbo-2.0.5/: CMakeLists.txt
contrib/libpng-1.6.37/: CMakeLists.txt
contrib/libvnc/: CMakeLists.txt
contrib/libvnc/examples/: simple.c
contrib/lzo-2.10/: Makefile  config.h  config.status  libtool  lzo2.pc
contrib/lzo-2.10/examples/: dict  lzopack  overlap  precomp  precomp2  simple
contrib/lzo-2.10/examples/.deps/: dict.Po  lzopack.Po  overlap.Po  precomp.Po  precomp2.Po  simple.Po
contrib/lzo-2.10/lzotest/: lzotest
contrib/lzo-2.10/lzotest/.deps/: lzotest.Po
contrib/lzo-2.10/minilzo/: testmini
contrib/lzo-2.10/minilzo/.deps/: t-minilzo.Po  t-testmini.Po
contrib/lzo-2.10/src/: liblzo2.la
contrib/lzo-2.10/src/.deps/: lzo1.Plo  lzo1_99.Plo  lzo1a.Plo  lzo1a_99.Plo  lzo1b_1.Plo  lzo1b_2.Plo  lzo1b_3.Plo  lzo1b_4.Plo  lzo1b_5.Plo  lzo1b_6.Plo  lzo1b_7.Plo  lzo1b_8.Plo  lzo1b_9.Plo  lzo1b_99.Plo  lzo1b_9x.Plo  lzo1b_cc.Plo  lzo1b_d1.Plo  lzo1b_d2.Plo  lzo1b_rr.Plo  lzo1b_xx.Plo  lzo1c_1.Plo  lzo1c_2.Plo  lzo1c_3.Plo  lzo1c_4.Plo  lzo1c_5.Plo  lzo1c_6.Plo  lzo1c_7.Plo  lzo1c_8.Plo  lzo1c_9.Plo  lzo1c_99.Plo  lzo1c_9x.Plo  lzo1c_cc.Plo  lzo1c_d1.Plo  lzo1c_d2.Plo  lzo1c_rr.Plo  lzo1c_xx.Plo  lzo1f_1.Plo  (+30 more)
contrib/lzo-2.10/tests/: align  chksum  promote  sizes
contrib/patch/qt660/: QT660RenameBlakeConflict.patch
contrib/x265_3.3/: .hg_archival.txt
image/: ShareDT.icns
install/: Info.plist  ShareDT.wxs
libvnc/: CMakeLists.txt
libvnc/common/: base64.c  crypto_openssl.c
libvnc/examples/: example.c
libvnc/ffmpeg/: ffmpeg_client.c  ffmpeg_client.h  ffmpeg_client_interface.c  ffmpeg_client_interface.h  ffmpeg_interface.c  ffmpeg_interface.h  ffmpeg_server.c  ffmpeg_server.h  ffmpeg_server_interface.c  ffmpeg_server_interface.h
libvnc/libvncclient/: rfbproto.c  sasl.c  sockets.c  tls_openssl.c  vncviewer.c
libvnc/libvncserver/: cargs.c  main.c  rfbserver.c  rfbssl_gnutls.c  sockets.c  stats.c  zlib.c
libvnc/libvncserver/tightvnc-filetransfer/: filetransfermsg.c
libvnc/rfb/: rfb.h  rfbclient.h  rfbproto.h
src/: MainConsole.cpp  MainConsole.h  MainManagementProcess.cpp  MainManagementProcess.h  MainNixService.cpp  MainService.cpp  MainService.h  MainWindowsService.cpp  ScreenProvider.cpp  ScreenProvider.h  StartServer.cpp  StartServer.h  WindowsProvider.cpp  WindowsProvider.h  main.cpp
src/capture/: Capture.cpp  Capture.h  CaptureInfo.cpp  CaptureInfo.h  CaptureServer.cpp  CaptureServer.h  ExportAll.cpp  ExportAll.h  ImageRect.cpp  ImageRect.h  RGB2YUV.h  SamplesProvider.cpp  SamplesProvider.h  ScreenProvider.cpp  ScreenProvider.h  WindowProcessor.cpp  WindowProcessor.h  WindowsProvider.cpp  WindowsProvider.h
src/capture/ios/: CGGetMonitors.cpp  CGGetWindows.cpp  CGWindowProcessor.cpp  CGWindowProcessor.h  CGWindowsFrame.cpp  NSFrame.h  NSFrame.mm
src/capture/linux/: XFrameProcessor.cpp  XFrameProcessor.h  XGetMonitors.cpp  XGetWindows.cpp
src/capture/win/: DirectX3DWindow.cpp  DirectX3DWindow.h  GDIHelper.h  GDIWindowProcessor.cpp  GDIWindowProcessor.h  WinGetMonitors.cpp  WinGetWindows.cpp
src/cli/: ExportImages.cpp  ExportImages.h  RemoteGetter.cpp  RemoteGetter.h
src/client/: Main.cpp
src/client/gui/: ShareDTClientWin.cpp  ShareDTClientWin.h  ShareDTClientWin.ui
src/client/qt/: SDThread.cpp  SDThread.h
src/client/vnc/: FetchingData.cpp  FetchingData.h
src/ffmpeg/: FfmpegUtil.cpp  FfmpegUtil.h  ReadWriteImages.c  ReadWriteImages.h  ReadWriteVideo.c  ReadWriteVideo.h
src/input/: InputInterface.cpp  InputInterface.h  KeyCode.txt
src/input/ios/: KeyCode.txt  KeyboardEvents.h  KeyboardEvents.mm  MouseEvents.h  MouseEvents.mm
src/input/linux/: KeyboardEvents.cpp  MouseEvents.cpp
src/input/win/: KeyboardEvents.cpp  MouseEvents.cpp  MouseEvents.h
src/local/: LocalDisplayer.cpp  LocalDisplayer.h  LocalDisplayer.ui
src/main/: Layout.cpp  Layout.h  LocalDisplayer.cpp  LocalDisplayer.h  LocalDisplayer.ui  MainConsole.cpp  MainConsole.h  MainConsoleSubFunction.cpp  MainConsoleSubFunction.h  MainGUI.cpp  MainGUI.h  MainManagementProcess.cpp  MainManagementProcess.h  MainNixService.cpp  MainService.cpp  MainService.h  MainWindow.cpp  MainWindow.h  MainWindowsService.cpp  RemoteGetter.cpp  RemoteGetter.h  ShareDT.cpp  ShareDT.h  ShareDTWindow.cpp  ShareDTWindow.h  SubFunction.cpp  SubFunction.h  main.h
src/main/client/: FetchingData.cpp  FetchingData.h  SDThread.cpp  ShareDTClientWin.cpp  ShareDTClientWin.h
src/service/: MainNixService.cpp  MainService.cpp  MainService.h  MainWindowsService.cpp  RemoteGetter.cpp  RemoteGetter.h
src/sgui/: ServerGUI.pro  ServerMainWindow.cpp  ServerMainWindow.h  ServerMainWindow.ui  main.cpp
src/util/: Buffer.cpp  Buffer.h  Compiler.h  Converter.cpp  Converter.h  CrossPlatform.h  Daemon.cpp  Daemon.h  Enum.cpp  Enum.h  Foreach.h  Logger.cpp  Logger.h  Path.cpp  Path.h  Pid.c  Pid.h  RGByuv.cpp  RGByuv.h  ReadWriteFD.cpp  ReadWriteFD.h  ScopedPrt.h  Size.h  Sock.cpp  Sock.h  StringTools.cpp  StringTools.h  Thread.cpp  Thread.h  ThreadPool.h  TimeUtil.c  TimeUtil.h  TypeDef.h  WindowsProcess.cpp  WindowsProcess.h  pidfile.c  portable-platform.h
testing/: CMakeLists.txt  testingcases.cmake
testing/googletest/: CMakeLists.txt
testing/src/: FfmpegEncodeDecode.cpp  FfmpegEncodeDecode.h  vvEncDecode.cpp  vvEncDecode.h
(+14 files in other folders)
